# ClaudeHoldem

./: .gitignore  CLAUDE.md  PHASE.md  README.md  ROADMAP.md  pyproject.toml
.claude/: hooks.json  settings.json
.claude/agents/: cfr-reviewer.md  rl-debugger.md  test-writer.md
docs/: phase3_lessons.md  phase4_hunl_design.md
experiments/: phase1_kuhn_vanilla.py  phase1_rps_convergence.py  phase2_leduc_cfr_plus.py  phase2_leduc_mccfr.py  phase2_leduc_vanilla.py  phase3_day5_d1_linear_weighted_pearson.py  phase3_day5_random_primary_a.py  phase3_deep_cfr_kuhn.py  phase3_deep_cfr_leduc.py  phase4_m34_hunl_baseline.py  phase4_m44_slumbot_pilot.py  phase4_m45_pilot.py  phase4_m45_train_strategies.py  phase4_step2_leduc_mccfr.py
experiments/conf/: phase1_kuhn.yaml  phase1_rps.yaml  phase2_leduc.yaml  phase2_leduc_cfr_plus.yaml  phase2_leduc_mccfr.yaml  phase3_deep_cfr_kuhn.yaml  phase3_deep_cfr_leduc.yaml  phase4_m34_hunl_baseline.yaml  phase4_m44_slumbot_pilot.yaml  phase4_m45_pilot.yaml  phase4_m45_train_strategies.yaml  phase4_step2_leduc_mccfr.yaml
scripts/: check_mps.py
tests/integration/: test_abstracted_hunl_mccfr_smoke.py  test_br_vs_cfr.py  test_cfr_kuhn.py  test_cfr_plus_vs_vanilla.py  test_deep_cfr_kuhn_correlation.py  test_exploitability_leduc_smoke.py  test_hunl_smoke.py  test_mccfr_vs_vanilla.py  test_rps_selfplay.py  test_slumbot_live.py  test_vanilla_cfr_leduc_smoke.py
tests/regression/: test_exploitability_convergence.py  test_kuhn_convergence.py  test_kuhn_perfect_recall.py  test_leduc_cfr_plus_convergence.py  test_leduc_mccfr_convergence.py  (+2 more)
(+55 files in other folders)
